fix dark mode toggle

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -237,7 +237,7 @@ body.dark-mode {
 .dark-mode-toggle {
   display: flex;
   margin: 0 auto;
-  position: absolute;
+  position: fixed;
   top: 15px;
   right: 12px;
 
